Update to add a 4.2.2 feature patch.

--- a/examples/featurePatch/org.eclipse.e4.rcp.r422.feature/.project
+++ b/examples/featurePatch/org.eclipse.e4.rcp.r422.feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipse.e4.rcp.example.feature</name>
+	<name>org.eclipse.e4.rcp.r422.feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
