--- a/examples/featurePatch/org.eclipse.e4.rcp.r422.feature/feature.properties
+++ b/examples/featurePatch/org.eclipse.e4.rcp.r422.feature/feature.properties
@@ -15,13 +15,13 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=Eclipse4 RCP Example Patch
+featureName=Eclipse4 RCP 4.2.2+ Patch
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse.org
 
 # "description" property - description of the feature
-description=The bundles required to patch Eclipse4 RCP 4.2.2 as an example
+description=The bundles required to patch Eclipse4 RCP 4.2.2
 
 # "copyright" property - text of the "Feature Update Copyright"
 copyright=\
