--- a/examples/featurePatch/org.eclipse.e4.rcp.r422.feature/pom.xml
+++ b/examples/featurePatch/org.eclipse.e4.rcp.r422.feature/pom.xml
@@ -20,13 +20,42 @@
     <version>4.2.2-SNAPSHOT</version>
   </parent>
   <groupId>org.eclipse.e4.feature</groupId>
-  <artifactId>org.eclipse.e4.rcp.example.feature</artifactId>
-  <version>4.2.2-SNAPSHOT</version>
+  <artifactId>org.eclipse.e4.rcp.r422.feature</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>eclipse-feature</packaging>
 
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.eclipse.tycho.extras</groupId>
+        <artifactId>tycho-source-feature-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <id>source-feature</id>
+            <goals>
+              <goal>source-feature</goal>
+            </goals>
+            <configuration>
+              <excludes>
+                <plugin id="org.eclipse.swt" />
+                <plugin id="org.eclipse.swt.gtk.linux.s390x" />
+                <plugin id="org.eclipse.swt.gtk.linux.s390" />
+                <plugin id="org.eclipse.swt.gtk.solaris.sparc" />
+                <plugin id="org.eclipse.swt.gtk.solaris.x86" />
+                <plugin id="org.eclipse.swt.gtk.linux.ppc64" />
+                <plugin id="org.eclipse.swt.cocoa.macosx" />
+                <plugin id="org.eclipse.swt.cocoa.macosx" />
+                <plugin id="org.eclipse.swt.gtk.aix.ppc" />
+                <plugin id="org.eclipse.swt.gtk.aix.ppc64" />
+                <plugin id="org.eclipse.swt.gtk.hpux.ia64_32" />
+                <plugin id="org.eclipse.swt.gtk.hpux.ia64" />
+              </excludes>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>org.eclipse.tycho</groupId>
         <artifactId>tycho-p2-plugin</artifactId>
