try and build using PDE

--- a/examples/featurePatch/org.eclipse.e4.rcp.r422.builder/build.properties
+++ b/examples/featurePatch/org.eclipse.e4.rcp.r422.builder/build.properties
@@ -44,23 +44,22 @@ collectingFolder=${archivePrefix}
 # value is a '&' separated list of ',' separate triples.  For example, 
 #     configs=win32,win32,x86 & linux,motif,x86
 # By default the value is *,*,*
-configs = *, *, *
-#configs=win32, win32, x86 & \
-#	win32,win32,x86_64 & \
-#	win32,win32,wpf & \
-#	linux, gtk, ppc & \
-#	linux, gtk, x86 & \
-#	linux, gtk, x86_64 & \
-#	linux, motif, x86 & \
-#	solaris, motif, sparc & \
-#	solaris, gtk, sparc & \
-#	aix, motif, ppc & \
-#	hpux, motif, ia64_32 & \
-#	macosx, carbon, ppc & \
-#	macosx, carbon, x86 & \
-#	macosx, cocoa, ppc & \
-#	macosx, cocoa, x86 & \
-#	macosx, cocoa, x86_64
+#configs = *, *, *
+configs=win32, win32, x86 & \
+	win32,win32,x86_64 & \
+	linux, gtk, ppc & \
+	linux, gtk, ppc64 & \
+	linux, gtk, x86 & \
+	linux, gtk, x86_64 & \
+	linux, gtk, s390 & \
+	linux, gtk, s390x & \
+	solaris, gtk, sparc & \
+	solaris, gtk, x86 & \
+	aix, gtk, ppc & \
+	aix, gtk, ppc64 & \
+	hpux, gtk, ia64_32 & \
+	macosx, cocoa, x86 & \
+	macosx, cocoa, x86_64
 
 # By default PDE creates one archive (result) per entry listed in the configs property.
 # Setting this value to true will cause PDE to only create one output containing all 
@@ -189,7 +188,7 @@ timestamp=007
 # installed Eclipse against which the application or plug-in code will be compiled and the RCP delta pack.
 
 #base=<path/to/parent/of/eclipse>
-#baseLocation=${base}/eclipse
+baseLocation=${base}/eclipse
 
 #Folder containing repositories whose content is needed to compile against
 repoBaseLocation=${base}/repos
@@ -290,4 +289,10 @@ javacVerbose=true
 # Default value for the version of the byte code targeted. This value is used when compiling plug-ins that do not set the Bundle-RequiredExecutionEnvironment or set javacTarget in build.properties.
 #javacTarget=1.1
 
+p2.repo=${buildDirectory}/${buildLabel}/repository
+p2.build.repo=file:${p2.repo}
+p2.category.definition=file:${base}/org.eclipse.e4.ui.r422.update/category.xml
+skipMirroring=true
+p2.gathering=true
+p2.flavor=tooling
 
