--- a/examples/featurePatch/org.eclipse.e4.rcp.r422.builder/build.properties
+++ b/examples/featurePatch/org.eclipse.e4.rcp.r422.builder/build.properties
@@ -174,11 +174,11 @@ timestamp=007
 
 #The value to be used for the qualifier of a plugin or feature when you want to override the value computed by pde.
 #The value will only be applied to plugin or features indicating build.properties, qualifier = context 
-#forceContextQualifier=<the value for the qualifier>
+forceContextQualifier=v20130423-0900
 
 #Enable / disable the generation of a suffix for the features that use .qualifier. 
 #The generated suffix is computed according to the content of the feature   
-#generateFeatureVersionSuffix=true
+generateFeatureVersionSuffix=true
 
 ############# BASE CONTROL #############
 # Settings for the base Eclipse components and Java class libraries 
